src/test/deca/context/valid/methode_within_methode.deca
class A {
int x;
int method(){
return this.x;
}
int methode2(int x){
return method();
}
}