src/test/deca/context/invalid/int_method_bool_return.deca
class A {
int method(boolean y){
return y;
}
}